# newPProj

./: activate  nohup.out  process_memory_20241207_013238.csv  process_memory_20241207_013352.csv  pyproject.conf  pyproject.toml
src/NewThon/: __main__.py  activate.py  activate.sh  convert.py  default  main.py  memwatch.py  newpyproj.py  tmp  tmp.py
src/NewThon/.local/conf/: project.bashrc
src/NewThon/.local/venvs/: default
src/NewThon/interface/cli/: main.py
src/NewThon/nested/: project.rc
src/doc/: projectstructure.md
